2003-04-04  Jacob Smullyan  <smulloni@smullyan.org>

	* Makefile.in, pylibs/Makefile.in, SkunkWeb/Makefile.in,
	SkunkWeb/Services/Makefile.in: added DESTDIR in the numerous
	places it wasn't being used in make install targets (to facilitate
	making rpms, ebuilds).

2003-04-03  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sw.conf.in: added comments about usertracking.

	* README: moved stuff about pickling errors to FAQ.

	* HACKING: added some package descriptions.

	* FAQ: reconciled conflicts, added an entry and did some editing.

2003-04-03    <drew@loki.sai-office>

	* pylibs/AE/Cache.py: added runOutOfCache and dontCacheSource
	options

	* docs/opman/opman.tex: added doc for runOutOfCache and 
	dontCacheSource

	* ACKS: added Hy Ginsberg

2003-04-02  Jacob Smullyan  <smulloni@smullbola.smullyan.org>

	* pylibs/PostgreSql/__init__.py (SimpleQueryTest): added
	connection_test capability to verify connections (useful
	if the database is being accessed remotely and connections
	are liable to intermittently going south).

	* SkunkWeb/SkunkWeb/Server.py (start): removing "server starting"
	message that I don't want to see any more. 
	
2003-04-02  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/swpython.py.in (usage): added "-q", "--quiet" options
	to suppress the "Initializing..." message that I'm tired of
	seeing.

	* SkunkWeb/swmgr.in: You can now stop or restart the daemon
	without running swpython if you pass swmgr the "-f" option (and if
	your pid file is in the configured default, which is likely); also
	improved usage text a tad.

2003-03-31    <drew@loki.sai-office>

	* SkunkWeb/Services/httpd/protocol.py (HTTPMethodRequestParser._getEnv):
	made it so that it now adds all HTTP headers to the environment, not
	just the ones we thought of.

2003-03-28    <drew@loki.sai-office>

	* pylibs/PyDO/sapdbgenscript.py: supports autoincrement fields and
	unique fields that aren't necessarily pk's
